línea extra en título en branch cabecera

--- a/blogspot.html
+++ b/blogspot.html
@@ -1,6 +1,8 @@
 <html>
     <head>
-        <title>Bienvenido a Hyperblog. Beibiiii 2.0</title>
+        <title>Bienvenido a Hyperblog. Beibiiii 2.0
+            \nlínea extra en el branch cabecera
+        </title>
         <link rel="stylesheet" href="css/estilos.css" />
     </head>
     <body>
